# taiga

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: QtSetup.cmake  TaigaConfig.cmake
src/: CMakeLists.txt
src/base/: chrono.cpp  chrono.hpp  file.cpp  file.hpp  rss.hpp  settings.cpp  settings.hpp  string.cpp  string.hpp  xml.cpp  xml.hpp
src/compat/: anime.cpp  anime.hpp  common.hpp  list.cpp  list.hpp  settings.cpp  settings.hpp
src/gui/: CMakeLists.txt
src/gui/common/: anime_list_item_delegate.cpp  anime_list_item_delegate_cards.cpp  anime_list_view.cpp  anime_list_view.hpp  anime_list_view_base.cpp  anime_list_view_base.hpp  anime_list_view_cards.cpp  anime_list_view_cards.hpp  clickable_label.cpp  clickable_label.hpp
src/gui/list/: list_widget.cpp  list_widget.hpp
src/gui/main/: main_window.cpp  main_window.hpp  navigation_item_delegate.cpp  navigation_widget.cpp  navigation_widget.hpp  now_playing_widget.cpp
src/gui/media/: media_dialog.cpp  media_dialog.hpp  media_dialog.ui  media_menu.cpp  media_menu.hpp
src/gui/models/: anime_list_model.cpp  anime_list_model.hpp  anime_list_proxy_model.cpp  anime_list_proxy_model.hpp  library_model.cpp  library_model.hpp
src/gui/search/: search_widget.cpp  search_widget.hpp
src/gui/settings/: settings_dialog.cpp
src/gui/utils/: format.cpp  format.hpp  image_provider.cpp  image_provider.hpp  painters.cpp  painters.hpp  svg_icon_engine.cpp  theme.cpp  theme.hpp  widgets.cpp  widgets.hpp
src/media/: anime.hpp  anime_db.cpp  anime_db.hpp  anime_db_2.cpp  anime_list.hpp  anime_season.cpp  anime_utils.cpp  anime_utils.hpp
src/resources/: CMakeLists.txt  gql.qrc  sql.qrc
src/resources/gql/anilist/: Media.gql  MediaSearch.gql
src/resources/sql/: createAnime.sql  createAnimeList.sql  createMeta.sql  insertAnime.sql  insertAnimeList.sql
src/resources/styles/: dark.qss  light.qss  main.qss
src/resources/translations/: taiga_en.ts
src/sync/: anilist.cpp  anilist.hpp  anilist_parsers.cpp  anilist_parsers.hpp  anilist_ratings.cpp  anilist_ratings.hpp  anilist_utils.cpp  anilist_utils.hpp  kitsu.hpp  kitsu_parsers.cpp  kitsu_parsers.hpp  kitsu_ratings.cpp  kitsu_ratings.hpp  kitsu_utils.cpp  kitsu_utils.hpp  myanimelist.hpp  myanimelist_parsers.cpp  myanimelist_parsers.hpp  myanimelist_utils.cpp  myanimelist_utils.hpp  service.cpp  service.hpp
src/taiga/: accounts.cpp  accounts.hpp  application.cpp  application.hpp  config.h  network.cpp  network.hpp  orange.cpp  session.cpp  session.hpp  settings.cpp  settings.hpp
src/track/: episode.cpp  episode.hpp  recognition.cpp  recognition.hpp  recognition_cache.cpp  recognition_cache.hpp  recognition_normalize.cpp  recognition_normalize.hpp  scanner.cpp  scanner.hpp
src/v1/base/: html.cpp  html.h
src/v1/media/: anime_season_db.cpp  anime_util.cpp  anime_util.h
src/v1/sync/: anilist.cpp
src/v1/taiga/: settings.h  settings_keys.cpp  settings_keys.h
src/v1/track/: feed_aggregator.cpp  recognition.h
src/v1/ui/: command.cpp  translate.h
src/v1/ui/dlg/: dlg_about.cpp
src/v1/ui/translate/: base.cpp
